--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_for @user do |f| %>
 
   <p>
-    <%= f.label :email, "Email Address" %><br />
+    <%= f.label :email %><br />
     <%= f.text_field :email %>
   </p>
   <p>
@@ -15,8 +15,8 @@
   </p>
   
   <p>
-    <%= f.label :password_confirmation, "Confirm Password" %><br />
+    <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation %>
   </p>
-  <p><%= f.submit (@user.new_record? ? "Sign up" : "Update") %></p>
+  <p><%= f.submit %></p>
 <% end %>
