--- a/config/deploy/templates/nginx_conf.erb
+++ b/config/deploy/templates/nginx_conf.erb
@@ -25,7 +25,7 @@ server {
   error_page 500 502 504 /500.html;
   error_page 503 @503;
 
-  server_name <%= fetch(:nginx_server_name) %>;
+  server_name <%= fetch(:nginx_server_name) %> *.<%= fetch(:nginx_server_name) %>>;
   root <%= current_path %>/public;
   try_files $uri/index.html $uri @unicorn_<%= fetch(:nginx_config_name) %>;
 
