--- a/config/deploy/templates/nginx_conf.erb
+++ b/config/deploy/templates/nginx_conf.erb
@@ -11,12 +11,12 @@ server {
 
 server {
 <% if fetch(:nginx_use_ssl) %>
-  listen 443;
+  listen 443 default_server;
   ssl on;
   ssl_certificate <%= nginx_ssl_cert_file %>;
   ssl_certificate_key <%= nginx_ssl_cert_key_file %>;
 <% else %>
-  listen 80;
+  listen 80 default_server;
 <% end %>
 
   client_max_body_size 4G;
@@ -25,7 +25,7 @@ server {
   error_page 500 502 504 /500.html;
   error_page 503 @503;
 
-  server_name <%= fetch(:nginx_server_name) %> *.<%= fetch(:nginx_server_name) %>>;
+  server_name _;
   root <%= current_path %>/public;
   try_files $uri/index.html $uri @unicorn_<%= fetch(:nginx_config_name) %>;
 
