Fix broken deletebutton in ckeditor/images

--- a/app/views/ckeditor/_image.html.erb
+++ b/app/views/ckeditor/_image.html.erb
@@ -3,5 +3,8 @@
   <div class="filename"><%= image.filename %> <%= image_tag('spinner.gif') if image.processing? %></div>
   <div class="filedate"><%= I18n.l(image.created_at, :format=>"%d %b %H:%M") %> </div>
   <div class="filesize"><%= number_to_human_size(image.size, :precision => 2) %>
-  <%= link_to image_tag("delete.png", :style => 'border: 0;'), { :controller => 'ckeditor', :action => :destroy, :id => image.id, :kind => 'image'}, { :method => :delete, :remote => true, :class => "delete-img" } %></div>
+  <%= link_to(image_tag("delete.png", style: 'border: 0;'),
+    admin_picture_path(image.id),
+    data: { method: "delete", confirm: "Vill du verkligen ta bort bilden?" },
+    class: "delete-img") %></div>
 </div>
