--- a/app/views/layouts/ckeditor.html.erb
+++ b/app/views/layouts/ckeditor.html.erb
@@ -4,7 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="robots" content="noindex, nofollow">	
   <%= stylesheet_link_tag 'admin', 'assets' %>
-  <%= javascript_include_tag 'jquery', 'assets', 'common' %>
+  <%= javascript_include_tag 'jquery', 'jquery_ujs', 'assets', 'common' %>
   <%= csrf_meta_tag %>
 
   <script type="text/javascript">
