--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -11,6 +11,7 @@
       <%= link_to t('themes'), [:admin, :looks], :class => (params[:controller].match('look') ? 'selected' : '') if current_user.admin_for(current_website) %>
       <% link_to t('publish'), [:new, :admin, :release], :class => (params[:controller] == 'admin/releases' ? 'selected' : '') %>
       <%= link_to t('settings'), [:edit, :admin, current_website], :class => ("selected" if request.url.match(/\/websites\/\d+\/edit$/)) %>
+      <%= link_to t('members'), [:admin, :members], class: ("selected" if params[:controller].match("members")) %>
     <% end %>
   </div>
 
