Display name of slug in template edit view
Humanized name is already shown in a header above

--- a/app/views/admin/page_templates/_form.html.erb
+++ b/app/views/admin/page_templates/_form.html.erb
@@ -37,7 +37,7 @@
   </ul>
 </div>
 <div>
-  <%= f.label :html, @page_template.name %><br />
+  <%= f.label :html, @page_template.slug %><br />
   <%= f.text_area :html %>
   <div id='code_editor'></div>
 </div>
