Make ace editor settings more uniform
syntax highlighting does not seem to work, this change does not seem to
affect it either

--- a/app/views/admin/content_items/edit.html.erb
+++ b/app/views/admin/content_items/edit.html.erb
@@ -6,11 +6,10 @@
 
 <script type="text/javascript">
 $(document).ready(function(){
-  var codeEditor = ace.edit('code_editor'),
-      HTMLMode   = require('ace/mode/html').Mode;
+  var codeEditor = ace.edit('code_editor');
 
   codeEditor.setTheme('ace/theme/tomorrow');
-  codeEditor.getSession().setMode(new HTMLMode());
+  codeEditor.getSession().setMode('ace/mode/liquid');
   codeEditor.getSession().setTabSize(2);
   codeEditor.getSession().setUseSoftTabs(true);
   codeEditor.getSession().setValue($('#content_item_text_content').val());
