Hide remove button when used by page
But it won't be hidden when only used by another template.
I don't think we can easily determine if it's used by another
template, so deletions can still happen to partials by mistake if user
thinks it is safe to delete just because the button is there.

--- a/app/views/admin/page_templates/edit.html.erb
+++ b/app/views/admin/page_templates/edit.html.erb
@@ -2,8 +2,10 @@
   <h2 style="display: inline-block">
     <%= @page_template.name %>
   </h2>
-  <%= link_to t("delete"), [:admin, @page_template.look, @page_template],
-    method: "delete", data: { confirm: t("really_delete") } %>
+  <% unless @page_template.used? %>
+    <%= link_to t("delete"), [:admin, @page_template.look, @page_template],
+      method: "delete", data: { confirm: t("really_delete") } %>
+  <% end %>
 </div>
 <%= render :partial => 'form' %>
 
