Allow admin to sort gallery photos
Issue #42 Use jQuery UI sortable and acts_as_list to make gallery photos
sortable

![img](http://cl.ly/image/463f3A1Q3i3N/Screen%20Recording%202015-01-22%20at%2005.00%20pm.gif)

--- a/app/views/admin/content_items/_content_item.html.erb
+++ b/app/views/admin/content_items/_content_item.html.erb
@@ -48,12 +48,12 @@
     </div>
   <%
   when "gallery" then %>
+      <% gallery = Gallery.find_or_create_by_content_item_id(content_item.id) %>
       <div id="content_item_<%= content_item.id %>"  class="content_item cms-gallery standoutcms_unselected" style="position: relative; overflow: hidden;  min-height: 32px;" 
         onclick="parent.select_item(this.id)" onmouseover="show_delete_button(this);" 
         onmouseout="hide_delete_button(this)" 
-        ondblclick="parent.load_gallery('<%= content_item.id %>')">
-      	<%= delete_content_item(content_item.id) %>
-        <% gallery = Gallery.find_or_create_by_content_item_id(content_item.id) %>
+        ondblclick="this.style.cursor = 'progress'; parent.location.pathname = '/admin/galleries/<%= gallery.id %>/edit'">
+       <%= delete_content_item(content_item.id) %>
         <%= raw gallery.content %>
       </div>
     <% else %>
