--- a/app/views/admin/gallery_photos/_photo.html.erb
+++ b/app/views/admin/gallery_photos/_photo.html.erb
@@ -1,6 +1,6 @@
-<div id="gallery_photo_<%= photo.id %>" style="position: relative; float: left; height: 150px; width: 110px; margin: 6px; overflow: hidden; padding: 3px; background: white;">
+<div id="gallery_photo_<%= photo.id %>" style="position: relative; overflow: hidden; background: white;" class="GalleryItem photo">
   <%= link_to image_tag('delete.png'), [:admin, photo], { :method => :delete, :remote => true, :style => 'border: 0; position: absolute; right: 0; top: 0;', :class => 'delete-and-remove-parent' } %>
-  <%= image_tag photo.photo.url(:thumb), :style => "width: 100px; border: 1px #333 solid;" rescue nil %>
+  <%= image_tag photo.photo.url(:thumb), :style => "width: 100px; border: 1px #333 solid; min-height: 50px", class: "handle" rescue nil %>
   <%= form_for([:admin, photo]) do |f| %>
     <span class='in_place_edit_text'><%= photo.caption %></span>
     <span class='in_place_edit_field' style="display: none;">
