--- a/app/views/admin/custom_data_rows/_form.html.erb
+++ b/app/views/admin/custom_data_rows/_form.html.erb
@@ -18,10 +18,14 @@
 			<%= f.label field.name_to_slug.to_sym %><br />
 			<%= f.file_field field.name_to_slug.to_sym %>
 
-  	<% when 'file' then %>
-  		<%= f.label field.name_to_slug.to_sym %><br />
-  		<%= f.file_field field.name_to_slug.to_sym %>
-			
+    <% when 'file' then %>
+      <%= f.label field.name_to_slug.to_sym %><br />
+      <%= f.file_field field.name_to_slug.to_sym %>
+      <% @custom_data_row.files_for(field).each do |file| %>
+        <%= link_to file.data_file_name, file.url %></pre>
+        <%= link_to image_tag("delete.png"), [:admin, @custom_data_row.website, file], method: :delete, confirm: t('really_delete') %>
+      <% end %>
+
 		<% when 'wysiwyg' then %>
 			<%= f.label field.name_to_slug.to_sym %><br />
 			<%= f.text_area field.name_to_slug.to_sym, :rows => 6, :id => "ckeditor_#{field.name_to_slug}" %>
