--- a/config/deploy/templates/unicorn.rb.erb
+++ b/config/deploy/templates/unicorn.rb.erb
@@ -4,7 +4,7 @@ stdout_path "<%= unicorn_log_file %>"
 stderr_path "<%= unicorn_error_log_file %>"
 
 listen "/tmp/unicorn.<%= fetch(:nginx_config_name) %>.sock"
-worker_processes <%= fetch(:unicorn_workers) %>
+worker_processes 4
 timeout 300
 
 preload_app true
